Refactor data manipulation algorithm and add calculation to moving average

--- a/src/main/java/com/chiwanpark/woo/view/RawDataView.form
+++ b/src/main/java/com/chiwanpark/woo/view/RawDataView.form
@@ -48,6 +48,12 @@
               <text value="그래프 보기"/>
             </properties>
           </component>
+          <component id="eea17" class="javax.swing.JButton" binding="btnMovingAverage">
+            <constraints/>
+            <properties>
+              <text value="Moving Average"/>
+            </properties>
+          </component>
           <component id="9edbd" class="javax.swing.JButton" binding="btnAnalysis">
             <constraints/>
             <properties>
