--- a/src/main/java/com/chiwanpark/woo/view/RawDataView.form
+++ b/src/main/java/com/chiwanpark/woo/view/RawDataView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="pnContents" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="589" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,6 +52,18 @@
             <constraints/>
             <properties>
               <text value="Moving Average"/>
+            </properties>
+          </component>
+          <component id="29658" class="javax.swing.JButton" binding="btnInRange">
+            <constraints/>
+            <properties>
+              <text value="In-range Filter"/>
+            </properties>
+          </component>
+          <component id="9afe3" class="javax.swing.JButton" binding="btnOutRange">
+            <constraints/>
+            <properties>
+              <text value="Out-range Filter"/>
             </properties>
           </component>
           <component id="9edbd" class="javax.swing.JButton" binding="btnAnalysis">
