Fix toolbar floating problem

--- a/src/main/java/com/chiwanpark/woo/view/RawDataView.form
+++ b/src/main/java/com/chiwanpark/woo/view/RawDataView.form
@@ -39,7 +39,9 @@
             <preferred-size width="-1" height="20"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <floatable value="false"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="99fb4" class="javax.swing.JButton" binding="btnGraph">
